# GEB

./: .buildinfo  .gitignore  .python-version  .zenodo.json  AGENTS.md  CHANGELOG.md  CITATION.cff  CWatM.ini  CWatM_GEB.ini  CWatM_GEB_Bhima.ini  GEB.code-workspace  GEB.yml  GEB_Bhima.yml  GEB_krishna.ini  GEB_switch.yml  HRUs.html  HRUs.py  LICENSE  README.md  README.txt  TODO.txt  ThirdPartyNotices.txt  WindModule_Test.py  agents.py  artists.html  artists.py  authors.html  authors_page.html  bhima.yml  build_model.py  build_model_farmers.py  calibration.html  calibration_test.py  config.py  configuration.html  contribution_guide.html  copyright.html  creating_a_model.html  cwatm_model.html  cwatm_model.py  (+41 more)
.github/: copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: auto-approve-docs.yml  black.yml  cross-platform-install.yml  docs.yml  docs_test.yml  publish.yml  publish_conda.yml  pytest.yml  ruff-check.yml  ruff-doc-regression-check.yml  ruff-format.yml  ruff.yml  test_publish.yml  ty-check.yml
ODD/: ODD.html  ODD_protocol.html
Scripts/: activate  activate.bat  activate.csh  activate.fish  activate.nu  activate.ps1  activate_this.py
_modules/: index.html
_modules/geb/: HRUs.html  agents.html  artists.html  model.html  reporter.html
_sources/: authors.rst.txt  calibration.rst.txt  configuration.rst.txt  contribution_guide.rst.txt  copyright.rst.txt  cwatm_model.rst.txt  index.rst.txt  installation.rst.txt  overview_and_installation.rst.txt  plantFATE.rst.txt  preprocessing.rst.txt  report.rst.txt
_sources/ODD/: ODD.rst.txt
_sources/agents/: farmers.rst.txt  government.rst.txt  households.rst.txt  ngo.rst.txt
agents/: __init__.html  __init__.py  crop_farmers.html  decision_module.py  farmers.html  farmers.py  government.html  government.py  households.html  ngo.html  ngo.py  reservoir_operators.html  reservoir_operators.py
calibration/: calibrate.py  config.yml  config_ivm_partition.yml  hydroStats.py  observations.csv  parameter_ranges.csv  plot_observations.py
calibration/data/: observations.csv
docs/: HRUs.rst  Makefile  agents.rst  artists.rst  authors.rst  authors_page.rst  calibration.rst  conf.py  configuration.rst  contribution_guide.rst  copyright.rst  creating_a_model.rst  cwatm_model.rst  forecast_setup_guide.md  forecasts.md  forecasts.rst  hydrounits.rst  index.md  index.rst  installation.rst  landunits.rst  mkdocs.yml  model.rst  plantFATE.rst  preprocessing.rst  references.bib  report.md  report.rst  running.rst  sensitivity_analysis_example.yml  updates.rst  visualisation.rst  wrangler.jsonc
docs/ODD/: ODD.rst  ODD_protocol.md
docs/about/: authors.md  contribution_guide.md  developers.md  license.md  updates.md
docs/advanced_topics/: calibration.md  data_structures.md  extreme_value_analysis.md  plantFATE.md
docs/agents/: __init__.rst  crop_farmers.md  crop_farmers.rst  farmers.rst  government.md  government.rst  households.md  index.md  industry.md  market.md  (+5 more)
examples/: build.yml  data_catalog.yml  forecast_config_example.yml  model.yml  update.yml
geb/: HRUs.py  __init__.py  artists.py  calibrate.py  cli.py  config.py  config_schema.py  cwatm_model.py  data.py  data_catalog.yml  forcing.py  geb_types.py  hazard_driver.py  mcp_server.py  model.py  module.py  multirun.py  reasonable_default_build.yml  reasonable_default_config.yml  reporter.py  run.py  runner.py  sensitivity.py  sfincs.py  store.py  types.py  typing.py  workflows.py
models/: bhima.yml  krishna.yml  sanctuary.yml  sandbox.yml  sfincs.ini
plot/: gini_coefficient.py  hydro_stats.py  irrigation.py  new_plot.py  plot.py  plot_discharge.py  plot_hydro_stats.py  plot_ipf_procedure.py  plot_irrigation.py  plot_land_units.py  plot_study_area.py  plot_subcells.py  plot_timelines.py  plotconfig.py  sanctuary.yml  total_discharge_per_year.py
preprocessing/: 10_create_farmers.py  10_iterative_proportional_fitting.py  10_preprocess_modflow.py  11_create_farmers.py  12_preprocess_modflow.py  13_scrape_prices.py  14_process_cultivation_costs.py  1_create_mask_and_hydro_maps.py  2_scale_cwatm.py  3_scrape_command_areas.py  4_create_lakes_and_reservoirs.py  5_create_admin_tifs.py  5_create_land_use_map.py  6_census_data_tehsil.py  6_create_land_use_map.py  6_get_farm_sizes.py  7_create_farmers.py  7_get_irrigation_source.py  7_scrape_census_data_tehsil.py  8_create_admin_tifs.py  8_create_farmers.py  8_create_tehsil_data_table.py  8_parse_IHDS I.py  8_pick_farmer_crops.py  9_iterative_proportional_fitting.py  9_parse_IHDS I.py  9_pick_farmer_crops.py  9_preprocess_modflow.py  census_data_tehsil.py  config.py  create_farmers.py  create_tehsil_data_table.py  download_isimip.py  farm_size_tehsil.py  get_important_crops.py  ipl.py  iterative_proportional_fitting.py  iterative_proportional_fitting_bak.py  methods.py  parse_IHDS I.py  (+4 more)
preprocessing_Bhima/: 10_preprocess_modflow.py  1_create_mask_and_hydro_maps.py  2_scale_cwatm.py  4_create_lakes_and_reservoirs.py  5_create_land_use_map.py  9_pick_farmer_crops.py
requirements/: docs.txt  plotting.txt  preprocessing.txt  requirements.txt
run_server/: all.sh  base.sh  build_model.sh  calibrate.out  calibrate.sh  calibrate_GPU.sh  calibrate_ivm_partition.sh  custom.sh  custom2.sh  custom_nogpu.sh  government_subsidies.sh  new_plot.sh  ngo_training.sh  plot_hydro_stats.sh  plot_irrigation.sh  preprocessing.sh  self_investment.sh  spinup+base.sh  spinup.sh  spinup_and_base.sh  sprinkler.sh  sugarcane.sh
scripts/: plot_large_scale_runtime_scaling.py
tests/: __init__.py  not_now_test_plantFATE.py  p_daily.ini  setup.py  test_HRUs.py  test_agent_array.py  test_build.py  test_cli.py  test_cli_tools.py  test_evaluate_dashboard.py  test_forcing.py  test_init_multiple.py  test_model.py  test_plantFATE.py  test_reporter.py  test_store.py  test_visualise.py  test_workflows.py  testconfig.py
workflow/: README_large_scale.md  Snakefile_benchmark  Snakefile_calibrate  Snakefile_large_scale  test_cluster_mode.sh
workspaces/: GEB_Maurice_tree.code-workspace
(+351 files in other folders)
