[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""

[project]
name = "geb"
version = "1.0.0b6"
description = "GEB simulates the environment (e.g., hydrology, floods), the individual people, households and orginizations as well as their interactions at both small and large scale."
authors = [
    {name = "Jens de Bruijn", email = "jens.de.bruijn@vu.nl"},
    {name = "Maurice Kalthof", email = "w.m.l.kalthof@vu.nl"},
    {name = "Veerle Bril", email = "v.c.bril@vu.nl"},
    {name = "Lars Tierolf", email = "lars.tierolf@vu.nl"},
    {name = "Tarun Sadana", email = "t.sadana@vu.nl"},
    {name = "Tim Busker", email = "tim.busker@vu.nl"},
    {name = "Rafaella Oliveira", email = "r.gouveialoureirooliveira@vu.nl"},
]
dependencies = [
    "cartopy>=0.24.1",
    "cdsapi>=0.7.5",
    "cfgrib>=0.9.14",
    "click>=8.1.8",
    "contextily>=1.6.2",
    "damagescanner==0.8b1",
    "dask",
    "deap>=1.4.1",
    "flopy>=3.8.0",
    "folium>=0.19.6",
    "geopandas>=1.0.1",
    "honeybees>=1.2.0",
    "hydromt==0.10.1",
    "hydromt-sfincs>=1.2.0",
    "isimip-client>=1.0.1",
    "nest_asyncio>=1.6.0", # for GUI in
    "networkx",
    "numba>=0.61.0",
    "numpy>=2.1",
    "openpyxl>=3.1.2",
    "pandas>=2.3.0",
    "permetrics>=2.0.0",
    "pyarrow>=17.0.0",
    "pyextremes>=2.3.3",
    "pyflwdir>=0.5.9",
    "pyogrio>=0.9.0",
    "pyresample>=1.32.0",
    "pytest",
    "pytest-dependency",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.2",
    "rasterio>=1.3.10",
    "rasterstats>=0.20.0",
    "rioxarray>=0.17.0",
    "ruff",
    "s3fs>=2023.6.0",
    "SALib>=1.4.8", # for sensitivity analysis
    "scipy>=1.16",
    "setuptools>=75.8.0",
    "statsmodels>=0.14.5",
    "tqdm>=4.66.1",
    "xarray>=2025.3.0",
    "xarray-regrid[accel]>=0.4.1",
    "xclim>=0.56.0",
    "xmipy>=1.5.0",
    "xvec>=0.4.0",
    "xugrid>=0.13.0",
    "zarr>=3.0.6",
]
requires-python = ">=3.12, <3.14"
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Hydrology",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
]

[tool.uv]
required-environments = [
    "sys_platform == 'linux'",
    "sys_platform == 'win32'",
    "sys_platform == 'darwin'"
]

[dependency-groups]
dev = [
    "myst-parser>=4.0.1",
    "pypandoc>=1.15",
    "sphinx<8",
    "sphinx-autodoc-typehints>=2.3.0",
    "sphinx-rtd-theme>=3.0.2",
    "sphinxcontrib-autoprogram>=0.1.9",
    "sphinxcontrib-autoyaml>=1.1.3",
    "sphinxcontrib-bibtex>=2.6.3",
]

[project.scripts]
geb = "geb.cli:cli"

[project.optional-dependencies]
fairstream = [
    "pgmpy==0.1.26",
    "daft-pgm>=0.1.4",
    "opt-einsum>=3.3.0",
]
display = [
    "jupyter>=1.1.1",
    "seaborn>=0.13.2",
]
plantfate = [
    "cppimport>=22.8.2",
    "pybind11>=2.13.6",
]

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
select = ["D"]
extend-select = ["I"]
ignore = [
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D107"
]

[tool.ruff.lint.isort]
known-first-party = ["geb"]
combine-as-imports = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pyright]
include = ["geb"]
exclude = [
    "**/__pycache__",
    "**/.venv",
]
pythonVersion = "3.13"
pythonPlatform = "Linux"
reportAttributeAccessIssue = "none"

[tool.pytest.ini_options]
norecursedirs = [".venv", "build", "dist", "tmp*"]
testpaths = ["tests"]
addopts = "--ignore=.venv"

[tool.ty.environment]
python-version = "3.13"