[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""

[project]
name = "geb"
version = "1.0.0b8"
description = "GEB simulates the environment (e.g., hydrology, floods), the individual people, households and orginizations as well as their interactions at both small and large scale."
authors = [
    {name = "Jens de Bruijn", email = "jens.de.bruijn@vu.nl"},
    {name = "Maurice Kalthof", email = "w.m.l.kalthof@vu.nl"},
    {name = "Veerle Bril", email = "v.c.bril@vu.nl"},
    {name = "Lars Tierolf", email = "lars.tierolf@vu.nl"},
    {name = "Tarun Sadana", email = "t.sadana@vu.nl"},
    {name = "Tim Busker", email = "tim.busker@vu.nl"},
    {name = "Rafaella Oliveira", email = "r.gouveialoureirooliveira@vu.nl"},
]
dependencies = [
    "cartopy==0.24.1", # pin until https://github.com/SciTools/cartopy/issues/2577 is fixed
    "cfgrib>=0.9.14",
    "click>=8.1.8",
    "contextily>=1.6.2",
    "damagescanner==0.9b21",
    "dask",
    "deap>=1.4.1",
    "flopy>=3.8.0",
    "folium>=0.19.6",
    "geopandas>=1.0.1",
    "hydromt==0.10.1",
    "hydromt-sfincs>=1.2.0",
    "networkx",
    "numba==0.62.1",
    "numpy>=2.1",
    "openpyxl>=3.1.2",
    "pandas>=2.3.0",
    "permetrics>=2.0.0",
    "pyarrow>=17.0.0",
    "pyflwdir>=0.5.9",
    "pyogrio>=0.9.0",
    "pyresample>=1.32.0",
    "pytest",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.2",
    "rasterio>=1.3.10",
    "rasterstats>=0.20.0",
    "rioxarray>=0.17.0",
    "s3fs>=2023.6.0",
    "SALib>=1.4.8", # for sensitivity analysis
    "scipy>=1.16",
    "setuptools>=75.8.0",
    "statsmodels>=0.14.5",
    "tqdm>=4.66.1",
    "xarray>=2025.3.0",
    "xarray-regrid[accel]>=0.4.1",
    "xclim>=0.56.0",
    "xmipy>=1.5.0",
    "zarr>=3.1.5",
    "plotly>=6.2.0",
    "kaleido>=1.0.0",
    "ty>=0.0.1a25",
    "pystac>=1.14.1",
    "xpystac>=0.4.0",
    "odc-stac>=0.4.0",
    "pystac-client>=0.9.0",
    "ecmwf-api-client>=1.6.5",
    "ruff>=0.14.0",
    "snakemake>=9.13.4",
    "pytest-plt>=1.1.1",
    "pytest-benchmark>=5.2.1",
    "imageio>=2.37.2",
    "pyquadkey2>=0.3.2",
    "osmnx>=2.0.6"
]
requires-python = ">=3.13, <3.14"
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Hydrology",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
]

[tool.uv]
required-environments = [
    "sys_platform == 'linux'",
    "sys_platform == 'win32'",
    "sys_platform == 'darwin'"
]

[dependency-groups]
dev = [
    "myst-parser>=4.0.1",
    "pypandoc>=1.15",
    "sphinx<8",
    "sphinx-autodoc-typehints>=2.3.0",
    "sphinx-rtd-theme>=3.0.2",
    "sphinxcontrib-autoprogram>=0.1.9",
    "sphinxcontrib-autoyaml>=1.1.3",
    "sphinxcontrib-bibtex>=2.6.3",
]

[project.scripts]
geb = "geb.cli:cli"

[project.optional-dependencies]
fairstream = [
    "pgmpy==0.1.26",
    "daft-pgm>=0.1.4",
    "opt-einsum>=3.3.0",
]
display = [
    "jupyter>=1.1.1",
    "seaborn>=0.13.2",
]
plantfate = [
    "cppimport>=22.8.2",
    "pybind11>=2.13.6",
]

[tool.ruff.lint]
select = [
    "ANN002",
    "ANN003",
    "ANN204",
    "ANN205",
    "ANN206",
    "DOC201",
    "DOC202",
    "DOC402",
    "DOC501",
    "DOC502",
    "ANN001",
    "ANN003",
    "ANN201",
    "ANN202",
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "D107",
    "D200",
    "D201",
    "D202",
    "D204",
    "D205",
    "D206",
    "D207",
    "D208",
    "D209",
    "D210",
    "D211",
    "D300",
    "D400",
    "D405",
    "D406",
    "D415",
    "D416",
    "D417",
    "D419",
    "F401",
    "UP006",
    "UP007",
    "UP008",
    "UP009",
    "UP010",
    "UP012",
    "UP017",
    "UP022",
    "UP029",
    "UP037",
    "UP044",
    "UP045",
]
extend-select = ["I"]
preview = true

[tool.ruff.lint.isort]
known-first-party = ["geb"]
combine-as-imports = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
norecursedirs = [".venv", "build", "dist", "tmp*"]
testpaths = ["tests"]
addopts = "--ignore=.venv"

[tool.ty.environment]
python-version = "3.13"

[tool.ty.rules]
possibly-missing-attribute = "ignore"
unresolved-attribute = "ignore"

